# Agent-note

./: .gitignore  .mcp.json  .notesrc.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  notes.py  pyproject.toml  server.py
.codex/: config.toml
.github/workflows/: tests.yml
docs/superpowers/plans/: 2026-07-04-ai-organized-notes.md
docs/superpowers/specs/: 2026-07-04-ai-memory-design.md  2026-07-04-ai-organized-notes-design.md
src/notes_mcp/: __init__.py  cli.py  conversation_import.py  core.py  embeddings.py  notes_store.py  server.py
tests/: test_conversation_import.py  test_core.py  test_embeddings.py  test_integration.py  test_notes_store.py  test_server.py
