[project]
name = "notes-mcp"
version = "0.1.0"
description = "A simple notes MCP server"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.27.2",
    "fastembed>=0.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notes_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: real-model tests (downloads ~90 MB); run with -m slow"]
addopts = "-m 'not slow'"