[project]
name = "notes-mcp"
version = "0.1.0"
description = "An append-only local notes server for the Model Context Protocol"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["mcp", "notes", "knowledge-management", "embeddings", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.27.2",
    "fastembed>=0.6",
]

[project.urls]
Homepage = "https://github.com/JLDynamics/Agent-note"
Repository = "https://github.com/JLDynamics/Agent-note"
Issues = "https://github.com/JLDynamics/Agent-note/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notes_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: real-model tests (downloads ~90 MB); run with -m slow"]
addopts = "-m 'not slow'"
